--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -153,7 +153,7 @@
                                     <% category.forEach(tags => { %>
                                      
                                         <div class="single_tag" style="display: grid; grid-template-columns: 1fr 1fr; gap: 2px;">
-                                            <input type="checkbox" class="tick_cat">
+                                            <input type="checkbox" class="tick_cat" style="display: inline-block">
                                             <h4><%= tags.name %></h4>
                                         </div>
 
